kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-kubernetes-demo
spec:
  selector:
    matchLabels:
      run: laravel-kubernetes-demo
  template:
    metadata:
      labels:
        run: laravel-kubernetes-demo
    spec:
      containers:
        - name: demo
          image: wpjscc/laravel-kubernetes-demo
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laravel-kubernetes-demo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: laravel-kubernetes-demo.test
      http:
        paths:
          - path: /
            backend:
              serviceName: laravel-kubernetes-demo
              servicePort: 80
