kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laravel-kubernetes-demo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: laravel-kubernetes-demo.test
      http:
        paths:
          - path: /
            backend:
              serviceName: laravel-kubernetes-demo
              servicePort: 80
